--- a/README
+++ b/README
@@ -15,9 +15,9 @@ Usage
 
 class ModelWithAttach < ActiveRecord::Base
 	has_attached_file :attach, 
-					  :storage => "database" , 
+					  :storage => :Database , 
 					  :styles => { :medium => "300x300>", :thumb => "100x100>" }, 
 					  :url => "/:class/:attachment/:id/:style/:basename.:extension"
 end
 
-Copyright (c) 2010 [Martin Caruso], released under the MIT license
+Copyright (c) 2010 [Christian Berkhoff], released under the MIT license
